<resources>
    <string name="app_name">My Story App</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Tempat untuk berbagi cerita, pengalaman, dan momen berharga dalam hidup Anda.</string>
    <string name="title_welcome_page">Selamat datang di MyStoryApp!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk berbagi cerita?</string>
    <string name="name">Nama</string>
    <string name="logout">Keluar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="floating_button">Floating Button</string>
    <string name="title_stories">Title Story</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="loginBerhasil">Login Berhasil</string>
    <string name="registerBerhasil">Register Sukses</string>
    <string name="description">Deskripsi</string>
    <string name="upload">Upload</string>
    <string name="image">Image</string>
    <string name="kamera">Kamera</string>
    <string name="galeri">Galeri</string>
    <string name="null_desc">Deskripsi harus diisi</string>
    <string name="null_img">Masukkan gambar</string>
    <string name="upload_berhasil">Upload Berhasil</string>
    <string name="upload_gagal">Upload Gagal</string>
    <string name="pilih_gambar">Pilih Gambar</string>
    <string name="img_detail">Image Detail</string>
    <string name="null_name">Nama harus diisi!</string>
    <string name="wrong_email">Format email salah</string>
    <string name="error_password">Password kurang dari 8 karakter</string>
    <string name="ulang">Ulangi</string>
    <string name="name_error">Nama harus diisi!</string>
    <string name="email_error">Format email tidak sesuai</string>
    <string name="password_error">Password kurang dari 8 karakter</string>
    <string name="error_description">Deskripsi tidak boleh kosong</string>
    <string name="error_img">Masukkan gambar</string>
    <string name="succes_permission">Akses diberikan</string>
    <string name="error_permission">Akses ditolak</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="gmaps">Maps</string>
    <string name="share_location">Share Location?</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
</resources>