<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.addstory.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/navy"
                android:text="@string/kamera"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/navy"
                android:text="@string/galeri"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_preview_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:src="@drawable/ic_baseline_image_24"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:layout_marginTop="16dp"
            app:boxBackgroundMode="outline"
            app:layout_constraintEnd_toEndOf="@+id/btn_add"
            app:layout_constraintStart_toStartOf="@+id/btn_add"
            app:layout_constraintTop_toBottomOf="@+id/iv_preview_image">

            <EditText
                android:id="@+id/ed_description"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:gravity="top|start"
                android:inputType="textPersonName"
                android:lines="4"
                android:minLines="4"
                android:scrollbars="vertical"
                tools:ignore="Autofill,LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/share_location"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/descriptionEditTextLayout"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEditTextLayout"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/upload"
            android:textSize="20sp"
            android:textStyle="bold"
            android:backgroundTint="@color/navy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_location"/>

        <ProgressBar
            android:id="@+id/progressBarCreateStory"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>